[package]
name = "quicklist"
license = "MIT"
version = "0.0.2"
authors = ["Sean DiGirolamo <s.digirolamo218@gmail.com>"]
description = "Command line based To Do list manager."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "1.0"
chrono = "0.4.19"
subprocess = "0.2.6"
simple-error = "0.2.3"
left-pad = "1.0.1"
termion = "1.5.6"
clap = { version = "3.1.10", features = ["derive"] }

[[bin]]
name = "ql"
path = "src/main.rs"
